kubernetes/auth-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo

---

apiVersion: v1
kind: Service
metadata:
  name: new-auth-mongo-sr
spec:
  selector:
    app: auth-mongo
  ports:
    - name: new-auth-mongo-sr
      protocol: TCP
      port: 27017
      targetPort: 27017
