kubernetes/tickets-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-ticket
  template:
    metadata:
      labels:
        app: new-ticket
    spec:
      containers:
        - name: new-ticket
          image: manishvyas393/new-ticket
---

apiVersion: v1
kind: Service
metadata:
  name: new-tickets-sr
spec:
  selector:
    app: new-ticket
  ports:
    - name: new-ticket
      protocol: TCP
      port: 4001
      targetPort: 4001

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo

---

apiVersion: v1
kind: Service
metadata:
  name: new-tickets-mongo-sr
spec:
  selector:
    app: tickets-mongo
  ports:
    - name: new-tickets-mongo-sr
      protocol: TCP
      port: 27017
      targetPort: 27017
