kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticket.tes
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: new-auth-sr
                port:
                  number: 4000
          - path: /api/ticket/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: new-tickets-sr
                port:
                  number: 4001
          - path: /api/orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: new-orders-sr
                port:
                  number: 4002
